force-app/main/default/objects/CC_Valores__mdt/CC_Valores__mdt.object-meta.xml
<CustomObject>
    <description>Listas de valores configurables por un administrador (para integraciones)</description>
    <label>Lista de valores</label>
    <pluralLabel>Listas de valores</pluralLabel>
</CustomObject>