force-app/main/default/objects/CC_Valores__mdt/fields/CC_Activa__c.field-meta.xml
<CustomField>
    <fullName>CC_Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Valor activo en el sistema</description>
    <inlineHelpText>Valor activo en el sistema</inlineHelpText>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>