force-app/main/default/objects/CC_Valores__mdt/fields/CC_Lista__c.field-meta.xml
<CustomField>
    <fullName>CC_Lista__c</fullName>
    <description>Lista de valores</description>
    <inlineHelpText>Lista de valores</inlineHelpText>
    <label>Lista</label>
    <length>80</length>
    <type>Text</type>
</CustomField>