force-app/main/default/objects/CC_Valores__mdt/fields/CC_Valor__c.field-meta.xml
<CustomField>
    <fullName>CC_Valor__c</fullName>
    <description>Valor sistema origen</description>
    <inlineHelpText>Valor sistema origen</inlineHelpText>
    <label>Valor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>