force-app/main/default/objects/CC_Valores__mdt/fields/CC_Valor_SFDC__c.field-meta.xml
<CustomField>
    <fullName>CC_Valor_SFDC__c</fullName>
    <description>Valor sistema destino</description>
    <inlineHelpText>Valor sistema destino</inlineHelpText>
    <label>Valor SFDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>